# jt_automation

./: .gitignore  README.md  main.py  pyproject.toml
.agents/: AGENTS.md
app/agent/: llm.py  model.py  worflow.py  workflow.py
app/services/: gmail_mcp.py  google_auth.py  mcp_server.py  sheets_service.py
