[project]
name = "jt-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.198.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "ipython>=8.39.0",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.7",
    "mcp[cli]>=1.28.1",
    "python-dotenv>=1.2.2",
]
